TestSuite/errors/err0288.pas
uses System;

function F1(): Nullable<Nullable<byte>>;
begin
end;

begin

end.